Add cookies middleware for Omniauth to work

--- a/client/package.json
+++ b/client/package.json
@@ -5,12 +5,16 @@
   "proxy": {
     "/api": {
       "target": "http://localhost:3001"
+    },
+    "/auth": {
+      "target": "http://localhost:3001"
     }
   },
   "dependencies": {
     "axios": "^0.18.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-google-oauth": "^1.0.0",
     "react-scripts": "1.1.5"
   },
   "scripts": {
